# serializer version: 1
# name: test_all_entities[all_modules_enabled][binary_sensor.my_pool_backwash-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.my_pool_backwash',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Backwash',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
    'original_icon': None,
    'original_name': 'Backwash',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'backwash',
    'unique_id': 'ABCDEF1234567890-backwash',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[all_modules_enabled][binary_sensor.my_pool_backwash-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'My Pool Backwash',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.my_pool_backwash',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[all_modules_enabled][binary_sensor.my_pool_chlorine_module-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.my_pool_chlorine_module',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Chlorine module',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Chlorine module',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'chlorine_module',
    'unique_id': 'ABCDEF1234567890-chlorine_module',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[all_modules_enabled][binary_sensor.my_pool_chlorine_module-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'My Pool Chlorine module',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.my_pool_chlorine_module',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[all_modules_enabled][binary_sensor.my_pool_chlorine_pump-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.my_pool_chlorine_pump',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Chlorine pump',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
    'original_icon': None,
    'original_name': 'Chlorine pump',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'chlorine_pump',
    'unique_id': 'ABCDEF1234567890-chlorine_pump',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[all_modules_enabled][binary_sensor.my_pool_chlorine_pump-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'My Pool Chlorine pump',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.my_pool_chlorine_pump',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[all_modules_enabled][binary_sensor.my_pool_conductivity_module-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.my_pool_conductivity_module',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Conductivity module',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Conductivity module',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'conductivity_module',
    'unique_id': 'ABCDEF1234567890-conductivity_module',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[all_modules_enabled][binary_sensor.my_pool_conductivity_module-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'My Pool Conductivity module',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.my_pool_conductivity_module',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[all_modules_enabled][binary_sensor.my_pool_dosing_tank-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.my_pool_dosing_tank',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Dosing tank',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Dosing tank',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'dosing_tank',
    'unique_id': 'ABCDEF1234567890-dosing_tank',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[all_modules_enabled][binary_sensor.my_pool_dosing_tank-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'My Pool Dosing tank',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.my_pool_dosing_tank',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[all_modules_enabled][binary_sensor.my_pool_electrolysis_low-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.my_pool_electrolysis_low',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Electrolysis low',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Electrolysis low',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'electrolysis_low',
    'unique_id': 'ABCDEF1234567890-electrolysis_low',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[all_modules_enabled][binary_sensor.my_pool_electrolysis_low-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'My Pool Electrolysis low',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.my_pool_electrolysis_low',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[all_modules_enabled][binary_sensor.my_pool_filtration-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.my_pool_filtration',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Filtration',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
    'original_icon': None,
    'original_name': 'Filtration',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'filtration',
    'unique_id': 'ABCDEF1234567890-filtration',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[all_modules_enabled][binary_sensor.my_pool_filtration-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'My Pool Filtration',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.my_pool_filtration',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[all_modules_enabled][binary_sensor.my_pool_heating-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.my_pool_heating',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Heating',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
    'original_icon': None,
    'original_name': 'Heating',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'heating',
    'unique_id': 'ABCDEF1234567890-heating',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[all_modules_enabled][binary_sensor.my_pool_heating-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'My Pool Heating',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.my_pool_heating',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[all_modules_enabled][binary_sensor.my_pool_hidro_cover_reduction-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.my_pool_hidro_cover_reduction',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Hidro cover reduction',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
    'original_icon': None,
    'original_name': 'Hidro cover reduction',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'hidro_cover_reduction',
    'unique_id': 'ABCDEF1234567890-hidro_cover_reduction',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[all_modules_enabled][binary_sensor.my_pool_hidro_cover_reduction-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'My Pool Hidro cover reduction',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.my_pool_hidro_cover_reduction',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[all_modules_enabled][binary_sensor.my_pool_hidro_fl2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.my_pool_hidro_fl2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Hidro FL2',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Hidro FL2',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'hidro_fl2',
    'unique_id': 'ABCDEF1234567890-hidro_fl2',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[all_modules_enabled][binary_sensor.my_pool_hidro_fl2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'My Pool Hidro FL2',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.my_pool_hidro_fl2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[all_modules_enabled][binary_sensor.my_pool_hidro_flow-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.my_pool_hidro_flow',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Hidro flow',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Hidro flow',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'hidro_flow',
    'unique_id': 'ABCDEF1234567890-hidro_flow',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[all_modules_enabled][binary_sensor.my_pool_hidro_flow-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'My Pool Hidro flow',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.my_pool_hidro_flow',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[all_modules_enabled][binary_sensor.my_pool_hidro_module-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.my_pool_hidro_module',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Hidro module',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Hidro module',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'hidro_module',
    'unique_id': 'ABCDEF1234567890-hidro_module',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[all_modules_enabled][binary_sensor.my_pool_hidro_module-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'My Pool Hidro module',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.my_pool_hidro_module',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[all_modules_enabled][binary_sensor.my_pool_io_module-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.my_pool_io_module',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'IO module',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'IO module',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'io_module',
    'unique_id': 'ABCDEF1234567890-io_module',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[all_modules_enabled][binary_sensor.my_pool_io_module-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'My Pool IO module',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.my_pool_io_module',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[all_modules_enabled][binary_sensor.my_pool_ph_acid_pump-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.my_pool_ph_acid_pump',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'pH acid pump',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
    'original_icon': None,
    'original_name': 'pH acid pump',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ph_acid_pump',
    'unique_id': 'ABCDEF1234567890-ph_acid_pump',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[all_modules_enabled][binary_sensor.my_pool_ph_acid_pump-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'My Pool pH acid pump',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.my_pool_ph_acid_pump',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[all_modules_enabled][binary_sensor.my_pool_ph_base_pump-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.my_pool_ph_base_pump',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'pH base pump',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
    'original_icon': None,
    'original_name': 'pH base pump',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ph_base_pump',
    'unique_id': 'ABCDEF1234567890-ph_base_pump',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[all_modules_enabled][binary_sensor.my_pool_ph_base_pump-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'My Pool pH base pump',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.my_pool_ph_base_pump',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[all_modules_enabled][binary_sensor.my_pool_ph_module-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.my_pool_ph_module',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'pH module',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'pH module',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ph_module',
    'unique_id': 'ABCDEF1234567890-ph_module',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[all_modules_enabled][binary_sensor.my_pool_ph_module-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'My Pool pH module',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.my_pool_ph_module',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[all_modules_enabled][binary_sensor.my_pool_ph_pump_alarm-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.my_pool_ph_pump_alarm',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'pH pump alarm',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'pH pump alarm',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ph_pump_alarm',
    'unique_id': 'ABCDEF1234567890-ph_pump_alarm',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[all_modules_enabled][binary_sensor.my_pool_ph_pump_alarm-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'My Pool pH pump alarm',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.my_pool_ph_pump_alarm',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[all_modules_enabled][binary_sensor.my_pool_redox_module-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.my_pool_redox_module',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Redox module',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Redox module',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'redox_module',
    'unique_id': 'ABCDEF1234567890-redox_module',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[all_modules_enabled][binary_sensor.my_pool_redox_module-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'My Pool Redox module',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.my_pool_redox_module',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[all_modules_enabled][binary_sensor.my_pool_redox_pump-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.my_pool_redox_pump',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Redox pump',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
    'original_icon': None,
    'original_name': 'Redox pump',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'redox_pump',
    'unique_id': 'ABCDEF1234567890-redox_pump',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[all_modules_enabled][binary_sensor.my_pool_redox_pump-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'My Pool Redox pump',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.my_pool_redox_pump',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[default][binary_sensor.my_pool_backwash-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.my_pool_backwash',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Backwash',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
    'original_icon': None,
    'original_name': 'Backwash',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'backwash',
    'unique_id': 'ABCDEF1234567890-backwash',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[default][binary_sensor.my_pool_backwash-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'My Pool Backwash',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.my_pool_backwash',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[default][binary_sensor.my_pool_chlorine_module-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.my_pool_chlorine_module',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Chlorine module',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Chlorine module',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'chlorine_module',
    'unique_id': 'ABCDEF1234567890-chlorine_module',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[default][binary_sensor.my_pool_chlorine_module-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'My Pool Chlorine module',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.my_pool_chlorine_module',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[default][binary_sensor.my_pool_conductivity_module-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.my_pool_conductivity_module',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Conductivity module',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Conductivity module',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'conductivity_module',
    'unique_id': 'ABCDEF1234567890-conductivity_module',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[default][binary_sensor.my_pool_conductivity_module-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'My Pool Conductivity module',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.my_pool_conductivity_module',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[default][binary_sensor.my_pool_dosing_tank-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.my_pool_dosing_tank',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Dosing tank',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Dosing tank',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'dosing_tank',
    'unique_id': 'ABCDEF1234567890-dosing_tank',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[default][binary_sensor.my_pool_dosing_tank-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'My Pool Dosing tank',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.my_pool_dosing_tank',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[default][binary_sensor.my_pool_electrolysis_low-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.my_pool_electrolysis_low',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Electrolysis low',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Electrolysis low',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'electrolysis_low',
    'unique_id': 'ABCDEF1234567890-electrolysis_low',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[default][binary_sensor.my_pool_electrolysis_low-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'My Pool Electrolysis low',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.my_pool_electrolysis_low',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[default][binary_sensor.my_pool_filtration-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.my_pool_filtration',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Filtration',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
    'original_icon': None,
    'original_name': 'Filtration',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'filtration',
    'unique_id': 'ABCDEF1234567890-filtration',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[default][binary_sensor.my_pool_filtration-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'My Pool Filtration',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.my_pool_filtration',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[default][binary_sensor.my_pool_heating-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.my_pool_heating',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Heating',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
    'original_icon': None,
    'original_name': 'Heating',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'heating',
    'unique_id': 'ABCDEF1234567890-heating',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[default][binary_sensor.my_pool_heating-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'My Pool Heating',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.my_pool_heating',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[default][binary_sensor.my_pool_hidro_cover_reduction-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.my_pool_hidro_cover_reduction',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Hidro cover reduction',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
    'original_icon': None,
    'original_name': 'Hidro cover reduction',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'hidro_cover_reduction',
    'unique_id': 'ABCDEF1234567890-hidro_cover_reduction',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[default][binary_sensor.my_pool_hidro_cover_reduction-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'My Pool Hidro cover reduction',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.my_pool_hidro_cover_reduction',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[default][binary_sensor.my_pool_hidro_flow-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.my_pool_hidro_flow',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Hidro flow',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Hidro flow',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'hidro_flow',
    'unique_id': 'ABCDEF1234567890-hidro_flow',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[default][binary_sensor.my_pool_hidro_flow-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'My Pool Hidro flow',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.my_pool_hidro_flow',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[default][binary_sensor.my_pool_hidro_module-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.my_pool_hidro_module',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Hidro module',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Hidro module',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'hidro_module',
    'unique_id': 'ABCDEF1234567890-hidro_module',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[default][binary_sensor.my_pool_hidro_module-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'My Pool Hidro module',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.my_pool_hidro_module',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[default][binary_sensor.my_pool_io_module-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.my_pool_io_module',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'IO module',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'IO module',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'io_module',
    'unique_id': 'ABCDEF1234567890-io_module',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[default][binary_sensor.my_pool_io_module-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'My Pool IO module',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.my_pool_io_module',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[default][binary_sensor.my_pool_ph_acid_pump-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.my_pool_ph_acid_pump',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'pH acid pump',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
    'original_icon': None,
    'original_name': 'pH acid pump',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ph_acid_pump',
    'unique_id': 'ABCDEF1234567890-ph_acid_pump',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[default][binary_sensor.my_pool_ph_acid_pump-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'My Pool pH acid pump',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.my_pool_ph_acid_pump',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[default][binary_sensor.my_pool_ph_base_pump-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.my_pool_ph_base_pump',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'pH base pump',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
    'original_icon': None,
    'original_name': 'pH base pump',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ph_base_pump',
    'unique_id': 'ABCDEF1234567890-ph_base_pump',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[default][binary_sensor.my_pool_ph_base_pump-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'My Pool pH base pump',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.my_pool_ph_base_pump',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[default][binary_sensor.my_pool_ph_module-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.my_pool_ph_module',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'pH module',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'pH module',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ph_module',
    'unique_id': 'ABCDEF1234567890-ph_module',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[default][binary_sensor.my_pool_ph_module-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'My Pool pH module',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.my_pool_ph_module',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[default][binary_sensor.my_pool_ph_pump_alarm-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.my_pool_ph_pump_alarm',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'pH pump alarm',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'pH pump alarm',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ph_pump_alarm',
    'unique_id': 'ABCDEF1234567890-ph_pump_alarm',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[default][binary_sensor.my_pool_ph_pump_alarm-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'My Pool pH pump alarm',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.my_pool_ph_pump_alarm',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[default][binary_sensor.my_pool_redox_module-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.my_pool_redox_module',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Redox module',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Redox module',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'redox_module',
    'unique_id': 'ABCDEF1234567890-redox_module',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[default][binary_sensor.my_pool_redox_module-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'My Pool Redox module',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.my_pool_redox_module',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[default][binary_sensor.my_pool_redox_pump-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.my_pool_redox_pump',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Redox pump',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
    'original_icon': None,
    'original_name': 'Redox pump',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'redox_pump',
    'unique_id': 'ABCDEF1234567890-redox_pump',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[default][binary_sensor.my_pool_redox_pump-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'My Pool Redox pump',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.my_pool_redox_pump',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
